--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,7 +12,9 @@
   "env": { "browser": true, "es6": true, "node": true },
   "parserOptions": {
     "sourceType": "module",
-    "project": "./tsconfig.json",
     "jsx": true
+  },
+  "rules": {
+    "@typescript-eslint/explicit-function-return-type": 0
   }
 }
