--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/nanoid": "^2.0.0",
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
     "@types/webpack": "^4.39.1",
@@ -29,6 +30,7 @@
     "webpack-dev-server": "^3.8.1"
   },
   "dependencies": {
+    "nanoid": "^2.1.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0"
   }
