--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/lodash": "^4.14.138",
     "@types/nanoid": "^2.0.0",
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
@@ -30,6 +31,8 @@
     "webpack-dev-server": "^3.8.1"
   },
   "dependencies": {
+    "localforage": "^1.7.3",
+    "lodash": "^4.17.15",
     "nanoid": "^2.1.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0"
