--- a/package.json
+++ b/package.json
@@ -12,24 +12,30 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/clean-webpack-plugin": "^0.1.3",
+    "@types/html-webpack-plugin": "^3.2.1",
     "@types/lodash": "^4.14.138",
     "@types/nanoid": "^2.0.0",
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
     "@types/styled-components": "^4.1.19",
     "@types/webpack": "^4.39.1",
+    "@types/workbox-webpack-plugin": "^4.1.0",
     "@typescript-eslint/eslint-plugin": "^2.3.0",
     "@typescript-eslint/parser": "^2.3.0",
+    "clean-webpack-plugin": "^3.0.0",
     "eslint": "^6.4.0",
     "eslint-config-prettier": "^6.3.0",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.14.3",
+    "html-webpack-plugin": "^3.2.0",
     "prettier": "^1.18.2",
     "ts-loader": "^6.1.2",
     "typescript": "^3.6.3",
     "webpack": "^4.40.2",
     "webpack-cli": "^3.3.9",
-    "webpack-dev-server": "^3.8.1"
+    "webpack-dev-server": "^3.8.1",
+    "workbox-webpack-plugin": "^4.3.1"
   },
   "dependencies": {
     "localforage": "^1.7.3",
